# hebi-cpp-examples

./: .gitignore
kits/daisy/: uploadSRC.zsh
kits/daisy/resources/: gains18.xml
kits/daisy/src/: hexapod_control.cpp
kits/daisy/src/param_display/: hexapod_parameter_view.cpp
kits/daisy/src/robot/: hexapod.cpp  leg.cpp
kits/quad/: CMakeLists.txt  updateGain.zsh  uploadSRC.zsh
kits/quad/resources/: quad_gains18.xml
kits/quad/src/: dynamicWalk.cpp  quadruped_control.cpp  staticWalk.cpp  testIK.cpp
kits/quad/src/input/: input_manager.hpp  input_manager_mobile_io.cpp  input_manager_mobile_io.hpp
kits/quad/src/robot/: quadruped.cpp  quadruped.hpp  quadruped_leg.cpp  quadruped_leg.hpp  quadruped_parameters.cpp  quadruped_parameters.hpp
kits/titan6/: CMakeLists.txt  README.md  uploadSRC.zsh
kits/titan6/resources/: gains18.xml  hex_config.xml  left.hrdf  right.hrdf
kits/titan6/src/: hexapod_control.cpp
kits/titan6/src/estimation/: Estimator.cpp  Estimator.hpp  SRUKF.cpp  SRUKF.h  SRUKF.hpp  daisy_fbk_struct.hpp  utils.cpp  utils.hpp
kits/titan6/src/robot/: hexapod.cpp  hexapod.hpp  hexapod_parameters.cpp  hexapod_parameters.hpp  leg.cpp  leg.hpp  step.cpp  step.hpp
kits/titan6/src/util/: modern_robotics.cpp  trajectory.hpp
